@@ -1,4 +1,5 @@
-EXTRA_DIST = ulonglong.m4 intdiv0.m4 inttypes.m4 inttypes_h.m4 inttypes-pri.m4 \
-	     stdint_h.m4 uintmax_t.m4 isc-posix.m4 lib-ld.m4 lib-link.m4 \
-	     lib-prefix.m4 codeset.m4 glibc21.m4 progtest.m4 gettext.m4 \
-	     iconv.m4 lcmessage.m4 glib-2.0.m4
+EXTRA_DIST = codeset.m4 gettext.m4 glib-2.0.m4 glibc21.m4 iconv.m4 \
+		intdiv0.m4 inttypes_h.m4 inttypes.m4 inttypes-pri.m4 \
+		isc-posix.m4 lcmessage.m4 lib-ld.m4 lib-link.m4 \
+		lib-prefix.m4 progtest.m4 stdint_h.m4 uintmax_t.m4 \
+		ulonglong.m4
